--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.78" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.79" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.78" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.78" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.78" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.79" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.79" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.79" media="screen" />
   </head>
 
   <body>
@@ -209,7 +209,7 @@
               button to check your solution.</p>
           </hidden>
         </section>
-        <controls><button @click="ToggleShowTutorial(event)">Got it</button></controls>
+        <controls><button class="secondary" @click="ToggleShowTutorial(event)">Back</button></controls>
       </modal>
       <modal v-if="appStateShowConfirmation" class="centered">
         <confirmation>
@@ -282,7 +282,7 @@
             <span>Version {{appDataVersion}}</span>
           </version>
         </section>
-        <controls><button @click="appStateShowInfo = false">Okay</button></controls>
+        <controls><button class="secondary" @click="appStateShowInfo = false">Back</button></controls>
       </modal>
       <modal v-if="appStateShowCatChooser">
         <section>
@@ -309,7 +309,7 @@
           <small>Enable this to add an extra random guessing card that doesn't belong in the solution.</small>
         </section>
         <controls>
-          <button class="secondary" @click="appStateShowCatChooser = false">Cancel</button>
+          <button class="secondary" @click="appStateShowCatChooser = false">Back</button>
           <button @click="HandleGoButtonClick(event)">Create</button>
         </controls>
       </modal>
@@ -413,7 +413,7 @@
           <small>Tap this to be sure that you have the latest version.</small>
         </section>
         <controls>
-          <button class="secondary" @click="CancelSettings(event)">Cancel</button>
+          <button class="secondary" @click="CancelSettings(event)">Back</button>
           <button :disabled="tempIDisInvalid" title="Please only use numbers." :class="{disabled: tempIDisInvalid}"
             @click="SubmitSettings(event)">Save</button>
         </controls>
@@ -786,15 +786,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.78" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.78" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.78" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.78" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.78" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.78" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.78" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.79" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.79" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.79" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.79" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.79" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.79" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.79" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.78" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.79" type="text/javascript"></script>
   </body>
 
 </html>
