--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.83" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.84" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.83" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.83" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.83" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.84" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.84" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.84" media="screen" />
   </head>
 
   <body>
@@ -672,7 +672,8 @@
           <diamond></diamond>
           <hints>
             <hint @pointerdown=" RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
-              v-for="(hint, index) in appDataHints" :key="index">
+              v-for="(hint, index) in appDataHints" :key="index"
+              :class="{pointoutparent: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}">
               <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
                 type="text" title="Please only use alphanumeric characters." pattern="[A-Za-z0-9]*"
                 :class="{pointout: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}"
@@ -786,15 +787,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.83" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.83" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.83" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.83" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.83" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.83" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.83" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.84" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.84" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.84" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.84" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.84" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.84" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.84" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.83" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.84" type="text/javascript"></script>
   </body>
 
 </html>
