--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.91" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.92" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.91" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.91" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.91" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.92" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.92" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.92" media="screen" />
   </head>
 
   <body>
@@ -60,7 +60,8 @@
       <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.2.06"
         media="screen" />
       <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.2.06" media="screen" />
-      <link rel="stylesheet" v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && !isPlayerCreating"
+      <link rel="stylesheet"
+        v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating"
         href="styles/focus.css?2.2.06" media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <!-- <icon class="logo giant"></icon> -->
@@ -150,8 +151,8 @@
             showing tips</a>
           <seekers>
             <a v-if="(isPlayerGuessing && appStateFirstRunGuessingIndex > 0) || (isPlayerCreating && appStateFirstRunCreatingIndex > 0) || (isPlayerReviewing && appStateFirstRunReviewingIndex > 0)"
-              @pointerup="HandlePreviousTipButtonPointerUp(event)" class="right">Back</a>
-            <a @pointerup="HandleAdvanceTipButtonPointerUp(event)" class="right">{{tipSubmitText}}</a>
+              @click="HandlePreviousTipButtonPointerUp(event)" class="right">Back</a>
+            <a @click="HandleAdvanceTipButtonPointerUp(event)" class="right">{{tipSubmitText}}</a>
           </seekers>
         </p>
       </pointer>
@@ -787,15 +788,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.91" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.91" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.91" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.91" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.91" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.91" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.91" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.92" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.92" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.92" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.92" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.92" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.92" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.92" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.91" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.92" type="text/javascript"></script>
   </body>
 
 </html>
