--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.94" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.95" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.94" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.94" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.94" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.95" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.95" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.95" media="screen" />
   </head>
 
   <body>
@@ -142,7 +142,7 @@
           </button>
         </subtitle>
       </notification>
-      <pointer :class="{hidden: hidePointer, inplay: pointerInPlay}"
+      <pointer :class="{hidden: hidePointer}"
         :style="{left: appStatePointerLocation.left + 'px', top: appStatePointerLocation.top + 'px'}">
         <p class="pointer-text" v-html="pointerText"></p>
         <p class="controls">
@@ -156,7 +156,7 @@
           </seekers>
         </p>
       </pointer>
-      <arrow :class="{hidden: hidePointer, inplay: pointerInPlay}"
+      <arrow :class="{hidden: hidePointer}"
         :style="{left: appStatePointerArrowLocation.x + 'px', top: appStatePointerArrowLocation.y + 'px', transform: 'translate(-10px, 2px) rotate(' +  appStatePointerArrowLocation.rotate + 'deg)'}">
       </arrow>
       <modal v-if="appStateShowTutorial" class="tutorial">
@@ -788,15 +788,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.94" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.94" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.94" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.94" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.94" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.94" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.94" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.95" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.95" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.95" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.95" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.95" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.95" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.95" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.94" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.95" type="text/javascript"></script>
   </body>
 
 </html>
