--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.03" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.04" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.03" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.03" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.03" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.04" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.04" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.04" media="screen" />
   </head>
 
   <body>
@@ -55,17 +55,17 @@
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
-        v-if="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme)"
-        href="styles/light.css?2.2.06" media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower || userSettingsUsesSimplifiedTheme" href="styles/simple.css?2.2.06"
+        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.2.06' : ''"
         media="screen" />
-      <link rel="stylesheet" v-if="appStateUseFlower" href="styles/flower.css?2.2.06" media="screen" />
       <link rel="stylesheet"
-        v-if="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating"
-        href="styles/focus.css?2.2.06" media="screen" />
+        v-bind:href:="appStateUseFlower || userSettingsUsesSimplifiedTheme ? 'styles/simple.css?2.2.06' : ''"
+        media="screen" />
+      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.2.06' : ''" media="screen" />
+      <link rel="stylesheet"
+        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.2.06' : ''"
+        media="screen" />
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
-        <h2>Facets</h2>
       </splash>
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
         <message :title="getPlayerMessage">
@@ -787,15 +787,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.03" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.3.03" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.3.03" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.3.03" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.3.03" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.3.03" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.3.03" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.04" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.3.04" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.3.04" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.3.04" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.3.04" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.3.04" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.3.04" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.03" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.04" type="text/javascript"></script>
   </body>
 
 </html>
