--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.04" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.05" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.04" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.04" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.04" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.05" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.05" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.05" media="screen" />
   </head>
 
   <body>
@@ -133,7 +133,8 @@
           <!-- <button class="small" @click="ToggleShowGlobalCreated(event)">Player puzzles</button> -->
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <button class="small" @click="ShowSettings(event)">Settings</button>
-          <button class="small isolated" style="bottom: 10px; right: 0px; " @click="ToggleShowInfo(event)">
+          <button title="Credits" class="small isolated" style="bottom: 10px; right: 0px; "
+            @click="ToggleShowInfo(event)">
             <icon class="meeples"></icon>
           </button>
           <button class="small highlightText" @click="window.open('https://www.buymeacoffee.com/wilvoss', '_blank')">
@@ -787,15 +788,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.04" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.3.04" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.3.04" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.3.04" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.3.04" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.3.04" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.3.04" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.05" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.3.05" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.3.05" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.3.05" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.3.05" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.3.05" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.3.05" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.04" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.05" type="text/javascript"></script>
   </body>
 
 </html>
