--- a/game/index.html
+++ b/game/index.html
@@ -50,6 +50,10 @@
         font-size: 2.2em;
       }
 
+      modal {
+        justify-content: space-around;
+      }
+
       modal message {
         background: none;
         justify-content: center;
@@ -118,7 +122,7 @@
           </icon>
         </message>
         <button id="refresh" class="hide" onclick="location.reload()">Refresh</button>
-        <button id="okay" class="hide" onclick="location.href='/'">Create Puzzle</button>
+        <button id="okay" class="hide" onclick="location.href='/'">Okay</button>
       </section>
     </modal>
 
