--- a/open/index.html
+++ b/open/index.html
@@ -37,8 +37,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="../images/icon192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="../images/icon512-apple-touch.png" />
 
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="128x128" href="../favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="../styles/normalize.css" media="screen" />
     <link rel="stylesheet" href="../styles/main.min.css" media="screen" />
