--- a/game/index.html
+++ b/game/index.html
@@ -26,6 +26,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="../images/icon192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="../images/icon512-apple-touch.png" />
 
+    <link rel="icon alternate" type="image/png" href="favicon.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <link rel="stylesheet" href="../styles/normalize.css" media="screen" />
