--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.18" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.19" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon alternate" type="image/png" href="favicon.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.18" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.18" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.18" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.19" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.19" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.19" media="screen" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17112522048"></script>
@@ -413,16 +413,16 @@
             </ul>
             Once you have updated your device settings, restart Facets, and then enable notifications here.
           </instructions> -->
-          <leftright style="margin-top: calc(2 * var(--defaultGap))">
+          <leftright style="margin-top: calc(2 * var(--defaultGap))" :class="{disabled: !tipsHaveBeenIncremented}">
             <a class="padded" @click="ResetFirstRun">Reset
               tips</a>
           </leftright>
-          <small>Tap this to restore the game guiding tips.</small>
+          <small :class="{disabled: !tipsHaveBeenIncremented}">Tap this to restore the game guiding tips.</small>
 
           <leftright>
-            <a class="padded" @click="ReloadApp">Version {{appDataVersion}}</a>
+            <a class="padded" @click="ReloadApp">Reload App</a>
           </leftright>
-          <small>Tap this to be sure that you have the latest version.</small>
+          <small>Tap this to be sure that you have the latest version ({{appDataVersion}}).</small>
         </section>
         <controls>
           <button class="secondary" @click="CancelSettings(event)">Back</button>
@@ -799,15 +799,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.18" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.3.18" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.3.18" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.3.18" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.3.18" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.3.18" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.3.18" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.19" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.3.19" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.3.19" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.3.19" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.3.19" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.3.19" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.3.19" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.18" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.19" type="text/javascript"></script>
   </body>
 
 </html>
