--- a/generate.html
+++ b/generate.html
@@ -33,9 +33,9 @@
     <link rel="icon alternate" type="image/png" href="favicon.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.23" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.23" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.23" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.24" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.24" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.24" media="screen" />
   </head>
 
   <body>
@@ -49,10 +49,7 @@
         <p> <a href="/">Click here to fix this.</a></p>
       </notification>
     </app>
-    <app id="app" style="opacity: 0"
-      :class="{ai: isAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing && currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
-      @pointerdown="HandleBodyPointerDown(event)"
-      @pointerup="HandleBodyPointerUp(event, appStateIsDragging ? appDataDraggedCard : selectedCard)">
+    <app id="app" style="opacity: 0">
       <preload v-if="appStatePageHasLoaded">
         <img width="0px" height="0px" alt="preload image that can't be seen"
           :style="{backgroundImage: 'url(./images/tut-4' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg)'}" />
@@ -64,72 +61,57 @@
         <img v-for="wordset in enabledWordSets" width="0px" height="0px" alt="preload image that can't be seen"
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
-      <link rel="stylesheet"
-        v-bind:href="appStateUseFlower || (userSettingsUsesLightTheme && !appStateShowSettings) || (appStateShowSettings && tempUserSettingsUsesLightTheme) ? 'styles/light.css?2.2.06' : ''"
-        media="screen" />
-      <link rel="stylesheet"
-        v-bind:href:="appStateUseFlower || userSettingsUsesSimplifiedTheme ? 'styles/simple.css?2.2.06' : ''"
-        media="screen" />
-      <link rel="stylesheet" v-bind:href="appStateUseFlower ? 'styles/flower.css?2.2.06' : ''" media="screen" />
-      <link rel="stylesheet"
-        v-bind:href="appStateUsePortraitLayout && !userSettingsShowAllCards && !tooSmall && !isPlayerCreating ? 'styles/focus.css?2.2.06' : ''"
-        media="screen" />
+
       <splash :class="{hide: appStatePageHasLoaded}">
         <icon class="logo giant"></icon>
       </splash>
 
       <button id="shareButton" class="inline" @click="HandleSubmitButtonPress">
-        <span v-if="!appStateIsGettingTinyURL" v-html="submitButtonText"></span>
-      </button>
-      <wrapper class="main" :class="{disabled: appStateSolving}">
-        <input autocomplete="off"
-          aria-label="This is an input that holds focus while the tray is rotating. It's not used for anything else."
-          aria-hidden="true" maxlength="0" :disabled="appStateIsGuessing" tabindex="-1" id="parkingInput"
-          style="opacity: 0; width: 0px; height: 0px; overflow: hidden; position: absolute; z-index: -1"
-          v-model="appDataParkingInputValue" tabindex="-1" />
 
-        <tray id="tray" :class="{rotating: appStateTrayIsRotating}"
-          :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
-          <diamond class="back"></diamond>
-          <diamond></diamond>
-          <hints>
-            <hint @pointerdown=" RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
-              v-for="(hint, index) in appDataHints" :key="index"
-              :class="{pointoutparent: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}">
-              <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
-                type="text" title="Please only use alphanumeric characters." pattern="[A-Za-z0-9]*"
-                :class="{pointout: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}"
-                :disabled="appStateIsGuessing || index > 0" v-model="hint.value" maxlength="14" type="text"
-                placeholder="clue" />
-            </hint>
-          </hints>
-          <cards :class="{disabled: appStateIsModalShowing}">
-            <spot v-for="(card, index) in appDataCards" v-if="!card.isExtra"
-              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && appStateFirstRunGuessingIndex === 3 && card.words.length > 0) || (appStateFirstRunCreatingIndex === 1 && isPlayerCreating), pointadjacent: (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
-              <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card)"
-                @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
-                :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
-                <words>
-                  <word
-                    :class="{pointout: appStateFirstRunCreatingIndex === 2 && isPlayerCreating && windex === 0 && (index === 0 || index === 1)}"
-                    v-for="(word, windex) in card.words" :id="'word' + windex">{{word.value}}</word>
-                </words>
-              </card>
-            </spot>
-          </cards>
-        </tray>
-      </wrapper>
+        <wrapper class="main" :class="{disabled: appStateSolving}">
+          <input autocomplete="off"
+            aria-label="This is an input that holds focus while the tray is rotating. It's not used for anything else."
+            aria-hidden="true" maxlength="0" :disabled="appStateIsGuessing" tabindex="-1" id="parkingInput"
+            style="opacity: 0; width: 0px; height: 0px; overflow: hidden; position: absolute; z-index: -1"
+            v-model="appDataParkingInputValue" tabindex="-1" />
+
+          <tray id="tray" :class="{rotating: appStateTrayIsRotating}"
+            :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
+            <diamond class="back"></diamond>
+            <diamond></diamond>
+            <hints>
+              <hint @pointerdown=" RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
+                v-for="(hint, index) in appDataHints" :key="index"
+                :class="{pointoutparent: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}">
+                <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false"
+                  :id="'hint' + index" type="text" title="Please only use alphanumeric characters."
+                  pattern="[A-Za-z0-9]*"
+                  :class="{pointout: index === 0 && ((appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 1 && isPlayerGuessing))}"
+                  :disabled="appStateIsGuessing || index > 0" v-model="hint.value" maxlength="14" type="text"
+                  placeholder="clue" />
+              </hint>
+            </hints>
+            <cards :class="{disabled: appStateIsModalShowing}">
+              <spot v-for="(card, index) in appDataCards" v-if="!card.isExtra"
+                :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && appStateFirstRunGuessingIndex === 3 && card.words.length > 0) || (appStateFirstRunCreatingIndex === 1 && isPlayerCreating), pointadjacent: (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
+                <card @click="HandleCardClick(event, card)" @pointerup="HandleCardPointerUp(event, card)"
+                  @pointerdown="HandleCardPointerDown(event, card)" :style="{rotate: (card.rotation * 90) + 'deg'}"
+                  :class="{rotating: card.isRotating, selected: card.isSelected, dropped: card.justDropped}">
+                  <words>
+                    <word
+                      :class="{pointout: appStateFirstRunCreatingIndex === 2 && isPlayerCreating && windex === 0 && (index === 0 || index === 1)}"
+                      v-for="(word, windex) in card.words" :id="'word' + windex">{{word.value}}</word>
+                  </words>
+                </card>
+              </spot>
+            </cards>
+          </tray>
+        </wrapper>
 
     </app>
-    <script src="helpers/console-enhancer.js?2.3.23" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.3.23" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.3.23" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.3.23" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.3.23" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.3.23" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.3.23" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.24" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.23" type="module" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.24" type="module"></script>
   </body>
 
 </html>
